tests/checker/bad/bad_map_key_3.scilla
scilla_version 0

contract Test ()

(* Illegal *)
transition testMapKey3 ()
  map = Emp Event Bool;
  e = { _eventname : "Name" };
  t = True;
  map2 = builtin put map e t  
end

